--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,6 +1,3 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
 
 @keyframes __slideInLeft {
     from{
@@ -10,6 +7,32 @@
         transform: translateX(0);
     }
 }
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  .fadein {
+    animation: fadeIn 1s ease-out forwards;
+    z-index: 1;
+  }
+  
+  .fadeout {
+    animation: fadeOut 1s ease-out forwards;
+    z-index: 0;
+  }
 .mainContainer{
     animation: __slideInLeft .5s;
     background: #e8eefa;
@@ -79,6 +102,7 @@
         padding-block: 20px;
     }
 }
+
 @media(min-width: 1180px){
     .sectionsContainer :first-child{
         width: 30vw;
@@ -91,39 +115,74 @@
 .collectionDiv{
     @apply justify-center items-center flex flex-col bg-gray-100 py-4 px-2
     sm:grid sm:grid-rows-3 sm:grid-cols-2 sm:text-2xl sm:grid-rows-[50px_80px_110px] sm:pl-[40px]
+    md:pl-[10px] md:grid-rows-[120px_80px_50px]
+    lg:px-[5%] lg:grid-rows-[150px_100px_80px] overflow-hidden
 }
+
 .collectionText{
     @apply font-bold text-lg text-gray-700 text-center
-    sm:text-2xl sm:order-1 sm:col-span-2 sm:text-start sm:text-3xl
+    sm:text-2xl sm:order-1 sm:col-span-2 sm:text-start sm:text-3xl 
+    md:col-span-1 md:text-5xl lg:w-[60px]
 }
 .imageDiv{
     @apply w-[250px] overflow-hidden h-[120px] order-2
     sm:order-4 sm:col-span-1 sm:w-[350px] sm:h-[180px]
+    md:col-span-1 md:row-span-3 md:order-2 md:h-[200px] md:w-[450px]
+    lg:w-[650px] lg:h-[100%]
 }
+
 .text{
     @apply text-center text-gray-500 px-3 py-2  text-lg font-thin 
     sm:order-2 sm:col-span-2 sm:text-start sm:text-2xl sm:text-xl sm:px-0
+    md:text-[18px] md:order-3 md:col-span-1
+    lg:text-[17px] lg:w-[350px]
 }
 .collectionButton {
     @apply px-3 py-2 w-[180px] bg-green-300 hover:bg-green-500 text-sm rounded-md font-bold cursor-pointer
     sm:order-3 sm:col-span-1 sm:text-lg sm:mt-[-30px]
+    md:order-4 md:mt-[5px]
 }
-
-
-
 
 .backPack{
-    @apply justify-center items-center flex flex-col gap-3 py-3
+    @apply justify-center items-center flex flex-col gap-3 px-[10%] mt-[70px]
+    sm:grid sm:grid-cols-2 sm:gap-x-[10%]
+    md:grid-cols-4 md:gap-x-[5%] md:px-[3%]
 }
 .bagImages{
-    @apply  px-[40px] h-[250px]  justify-center items-center flex
+    @apply h-[200px] overflow-hidden bg-[#F4F8F9]
+    sm:h-[250px] md:h-auto 
+}
+.images{
+    @apply object-cover w-full h-[full] translate-y-[-10px]
 }
 .bagImages :nth-child(1){
     @apply hover:scale-105 transform overflow-hidden
 }
 .storename{
     @apply text-center text-2xl font-semibold text-gray-700 py-[10px] 
+    md:text-sm
 }
 .storeText{
     @apply text-center font-thin text-gray-500
+}
+.footer{
+    @apply flex justify-between items-center flex-col
+}
+.footerImage{
+    @apply h-[450px] w-[full] relative object-cover overflow-hidden
+}
+.footer :first-child{
+    @apply h-[450px] w-[100%] overflow-hidden
+}
+.footerDiv2{
+    @apply fixed absolute flex justify-between mt-[10%] cursor-pointer h-[400px]
+}
+.footerDiv2 div{
+    @apply flex w-[10%]
+}
+.footer div{
+    z-index: 1;
+}
+.bestSellers{
+    @apply bg-green-300 py-2 font-semibold text-xl text-center w-full
 }
