--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -222,3 +222,9 @@
 .ptags p{
     @apply sm:text-lg md:text-2xl px-[10px] sm:px-[15px] md:px-[20px] py-[3%]
 }
+.review{
+    @apply text-sm sm:text-lg md:text-2xl text-center w-full mx-[3px] sm:w-[600px] md:w-[800px] py-[20px]
+}
+.review{
+    box-shadow: 1px -1px 15px;
+}
